data/derived/fa15/progs/unify/prog1315.ml.out
Characters 344-345:
  | Square(e) -> e*.e
                 ^
Error: This expression has type expr but an expression was expected of type
         float
